logs/dag_id=weather_dag_api/run_id=manual__2023-04-26T18:49:41.093089+00:00/task_id=cities.insert_data_Kyiv/attempt=1.log
[2023-04-26T18:50:20.754+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Kyiv manual__2023-04-26T18:49:41.093089+00:00 [queued]>
[2023-04-26T18:50:21.176+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Kyiv manual__2023-04-26T18:49:41.093089+00:00 [queued]>
[2023-04-26T18:50:21.192+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T18:50:21.201+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-26T18:50:21.213+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T18:50:21.521+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): cities.insert_data_Kyiv> on 2023-04-26 18:49:41.093089+00:00
[2023-04-26T18:50:21.586+0000] {standard_task_runner.py:55} INFO - Started process 2204 to run task
[2023-04-26T18:50:21.656+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'cities.insert_data_Kyiv', 'manual__2023-04-26T18:49:41.093089+00:00', '--job-id', '412', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmpfv25nzco']
[2023-04-26T18:50:21.669+0000] {standard_task_runner.py:83} INFO - Job 412: Subtask cities.insert_data_Kyiv
[2023-04-26T18:50:22.199+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.cities.insert_data_Kyiv manual__2023-04-26T18:49:41.093089+00:00 [running]> on host b46a99c748bd
[2023-04-26T18:50:23.342+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=cities.insert_data_Kyiv
AIRFLOW_CTX_EXECUTION_DATE=2023-04-26T18:49:41.093089+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-26T18:49:41.093089+00:00
[2023-04-26T18:50:23.350+0000] {sql.py:254} INFO - Executing: INSERT INTO measurements (temp) VALUES ({ti.xcom_pull('cities.process_data_Kyiv'[1])})
[2023-04-26T18:50:23.419+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-26T18:50:25.852+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-26T18:50:25.859+0000] {sql.py:375} INFO - Running statement: INSERT INTO measurements (temp) VALUES ({ti.xcom_pull('cities.process_data_Kyiv'[1])}), parameters: None
[2023-04-26T18:50:25.864+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 1: INSERT INTO measurements (temp) VALUES ({ti.xcom_pull('citie...
                                                ^

[2023-04-26T18:50:25.928+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=cities.insert_data_Kyiv, execution_date=20230426T184941, start_date=20230426T185020, end_date=20230426T185025
[2023-04-26T18:50:26.019+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 412 for task cities.insert_data_Kyiv (syntax error at or near "{"
LINE 1: INSERT INTO measurements (temp) VALUES ({ti.xcom_pull('citie...
                                                ^
; 2204)
[2023-04-26T18:50:26.114+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-26T18:50:26.367+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
